UserMediaRequest should not prevent entering the back/forward cache https://bugs.webkit.org/show_bug.cgi?id=203098 <rdar://problem/56716101>

Reviewed by Eric Carlson.

Source/WebCore:

Allow pages to enter the back/forward cache, even if they have a pending
getUserMedia promise. Whenever we get a permission decision from the
UIProcess, we now schedule a task to resolve/reject the promise on the
WindowEventLoop. The WindowEventLoop properly gets suspended while in
the back/forward cache.

Test: http/tests/navigation/page-cache-getUserMedia-pending-promise.html

* Modules/mediastream/MediaDevices.cpp:
(WebCore::MediaDevices::getUserMedia const):
If the document is not fully active, reject the promise with an InvalidStateError, as per:
- https://w3c.github.io/mediacapture-main/#dom-mediadevices-getusermedia (Step 4)

* Modules/mediastream/UserMediaRequest.cpp:
(WebCore::UserMediaRequest::allow):
(WebCore::UserMediaRequest::deny):
(WebCore::UserMediaRequest::shouldPreventEnteringBackForwardCache_DEPRECATED const): Deleted.
* Modules/mediastream/UserMediaRequest.h:

LayoutTests:

Add layout test coverage.

* fast/mediastream/MediaDevices-getUserMedia-expected.txt:
* http/tests/navigation/page-cache-getUserMedia-pending-promise-expected.txt: Added.
* http/tests/navigation/page-cache-getUserMedia-pending-promise.html: Added.


Canonical link: https://commits.webkit.org/216962@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251746 268f45cc-cd09-0410-ab3c-d52691b4dbfc