Source/WebCore/Modules/mediastream/UserMediaRequest.h
@@ -85,7 +85,6 @@ private:
 
     void stop() final;
     const char* activeDOMObjectName() const final;
-    bool shouldPreventEnteringBackForwardCache_DEPRECATED() const final;
 
     void mediaStreamDidFail(RealtimeMediaSource::Type);
 
